# vekotin

./: Cargo.toml  README.md  Web.toml
compression/: Cargo.toml
compression/src/: zlib.rs
compression/src/deflate/: huffman.rs  mod.rs
digest/: Cargo.toml
digest/src/: lib.rs
examples/: obj.rs  png.rs
fiddling/: Cargo.toml
fiddling/src/: lib.rs
geometry/: Cargo.toml
geometry/src/: line_segment.rs  point.rs  transform.rs  triangle.rs
gfx/: Cargo.toml
gfx/src/: camera.rs  color.rs  lib.rs
gfx/src/cpu/: canvas.rs  mod.rs
loader/: Cargo.toml
loader/src/: lib.rs  obj.rs  png.rs
math/: Cargo.toml
math/src/: assert.rs  matrix.rs  vector.rs
src/: lib.rs  main.rs
src/compression/: deflate.rs  mod.rs  zlib.rs
src/compression/deflate/: dynamic_huffman.rs  fixed_huffman.rs  huffman.rs  mod.rs  static_huffman.rs
src/digest/: mod.rs
src/fiddling/: mod.rs
src/geometry/: line_segment.rs  mod.rs  point.rs  transform.rs  triangle.rs
src/gfx/cpu/: mod.rs
src/loader/: obj.rs  png.rs
src/math/: matrix.rs  mod.rs  vec.rs  vector.rs
