[package]
name = "gfx"
version = "0.1.0"
authors = ["outamaa <ville.outamaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometry = { path = "../geometry" }
loader = { path = "../loader" }
math = { path = "../math" }