[package]
name = "loader"
version = "0.1.0"
authors = ["outamaa <ville.outamaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
compression = { path = "../compression" }
digest = { path = "../digest" }
fiddling = { path = "../fiddling" }
math = { path = "../math" }
# lazy_static = "1.4"
